fix DatePicker on firefox

--- a/src/design-system/form/DatePicker.module.css
+++ b/src/design-system/form/DatePicker.module.css
@@ -1,15 +1,7 @@
 .datePicker {
-  input,
-  input::-webkit-calendar-picker-indicator {
-    position: absolute;
+  input {
+    bottom: -8px;
     left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    opacity: 0;
-    cursor: pointer;
   }
 
   span {
